<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="quantitynum">0</string>
    <string name="orderbutton">Order</string>
    <string name="price">ORDER SUMMARY</string>
    <string name="pricenum">0</string>
    <string name="plusbutton">+</string>
    <string name="minusbutton">-</string>
    <string name="toppings">Toppings</string>
    <string name="topping1">Whipped Cream</string>
    <string name="topping2">Chocolate Chip</string>
    <string name="entername">Please enter your Name here</string>
    <string name="helloName">Hello: <xliff:g example="Tree" id="customerName">%s</xliff:g></string>
    <string name="yourOrder">Your order is: <xliff:g example="2" id="quantity">%d</xliff:g> cups</string>
    <string name="addWhippedCream">With whipped cream</string>
    <string name="addChocolate">With Chocolate chips</string>
    <string name="yourTotal">Your Total is: <xliff:g example="10" id="price">%s</xliff:g></string>
    <string name="thankYou">Thank you!</string>
</resources>
